--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,6 @@
 /* Variables */
 
-// Base color
-
-
+$--menu-width: 240px;
 
 $--theme-color:#3498db;
 
@@ -13,8 +11,5 @@ $--border:1px solid #e6e6e6;
 // The :export directive is the magic sauce for webpack
 // https://mattferderer.com/use-sass-variables-in-typescript-and-javascript
 :export {
-  menuBg: $--menu-bg;
-  menuText: $--menu-text;
-  menuActiveText: $--menu-active-text;
-  firstMenuActiveText: $--first-menu-active-text;
+  menuWidth: $--menu-width;
 }
