--- a/src/styles/element/index.scss
+++ b/src/styles/element/index.scss
@@ -3,11 +3,12 @@
 @forward 'element-plus/theme-chalk/src/common/var.scss' with (
   $colors: (
     'primary': (
-      'base': green,
+      // 'base': $--theme-color,
+      'base': #fa541c,
     ),
   ),
 );
-
 // 如果只是按需导入，则可以忽略以下内容。
 // 如果你想导入所有样式:
 @use "element-plus/theme-chalk/src/index.scss" as *;
+
