--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,8 +15,8 @@ html {
   overflow-y: scroll;
 
   &::-webkit-scrollbar {
-    width: 6px;
-    height: 7px;
+    width: 0;
+    height: 0;
   }
 
   &::-webkit-scrollbar-thumb {
