--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,8 @@
 
 html {
   height: 100%;
+
+  @include scrollbar;
 }
 
 body {
@@ -40,15 +42,4 @@ a:hover {
   cursor: pointer;
   color: inherit;
   text-decoration: none;
-}
-
-.clearfix {
-  &:after {
-    visibility: hidden;
-    display: block;
-    font-size: 0;
-    content: ' ';
-    clear: both;
-    height: 0;
-  }
 }
