--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -15,3 +15,11 @@
     background: rgba(0, 0, 0, 0.1);
   }
 }
+
+@mixin ellipsis($line-clamp: 1) {
+  display: -webkit-box;
+  -webkit-line-clamp: $line-clamp;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
