--- a/src/styles/element/index.scss
+++ b/src/styles/element/index.scss
@@ -1,12 +1,14 @@
 // styles/element/index.scss
 /* 只需要重写你需要的即可 */
-@forward 'element-plus/theme-chalk/src/common/var.scss' with (
-  $colors: (
-    'primary': (
-      'base': #7e9cff
-    )
-  )
-);
+/* dark 'element-plus/theme-chalk/dark/css-vars.css' */
+/* default 'element-plus/theme-chalk/src/common/var.scss' */
+// @forward 'element-plus/theme-chalk/src/common/var.scss' with (
+//   $colors: (
+//     'primary': (
+//       'base': #7e9cff
+//     )
+//   )
+// );
 // 如果只是按需导入，则可以忽略以下内容。
 // 如果你想导入所有样式:
 @use 'element-plus/theme-chalk/src/index.scss' as *;
