--- a/src/styles/element/index.scss
+++ b/src/styles/element/index.scss
@@ -11,4 +11,6 @@
 // );
 // 如果只是按需导入，则可以忽略以下内容。
 // 如果你想导入所有样式:
+// @use 'element-plus/theme-chalk/src/common/var.scss' as *;
+@use 'element-plus/theme-chalk/dark/css-vars.css' as *;
 @use 'element-plus/theme-chalk/src/index.scss' as *;
